fixed so that it looks great both on mobile and desktop

--- a/style.css
+++ b/style.css
@@ -1,24 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap");
 
 body {
-  display: grid;
-  grid-template-rows: auto, auto, auto;
-  grid-template-areas: "top-row","main","footer";
-  /* grid-template-columns: 1fr; */
-  align-items: space-between;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: red;
   margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+p {
+    margin: 0;
 }
 
 #top-row {
-    width: 100vw;
-    height: 124px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+  width: 100vw;
+  height: 124px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 nav {
   width: 100vw;
@@ -82,8 +83,8 @@ nav {
 }
 
 #menuToggle {
-  /* overflow: hidden; */
-  /* position: absolute; */
+  overflow: hidden;
+ 
   width: 60px;
   height: 60px;
   display: flex;
@@ -141,8 +142,10 @@ nav {
 
 main {
   width: 100vw;
+  height: auto;
 }
 main div.frame {
+  width: 100vw;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -167,25 +170,18 @@ main div.frame {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  /* color: black; */
-  background-color: #7d7d7d;
-  background-image: url("your texture tile address for the inside border");
-  display: block;
-  max-height: 75vh;
-  width: auto;
-  margin: auto;
-  border-radius: 7px 7px 7px 7px;
-  -moz-border-radius: 7px 7px 7px 7px;
-  -webkit-border-radius: 7px 7px 7px 7px;
-  border: 1px solid #61201e;
-  box-shadow: 0px 0px 60px -9px rgba(0, 0, 0, 1);
+}
+
+#lista img {
+  height: 40vh;
+  width: 40vw;
 }
 
 #lista p {
   font-family: "Saira Stencil One", cursive;
   border-style: solid;
   border-color: black;
+  text-align: center;
 }
 
 .arrow-button img {
